# self-driving-car

./: README.md  build.sh  build_windows.sh  pyproject.toml
.github/workflows/: release.yaml
src/: main.py  test.ipynb
src/perceptron/: Activation.py  DataProcess.py  GUI.py  Layer.py  LossFunction.py  Model.py  Trainer.py  __init__.py  data_process.py
src/perceptron/data/: Preprocess.py  Visualize.py
src/perceptron/network/: Activation.py  Layer.py  LossFunction.py  Model.py  __init__.py
src/perceptron/ui/: Button.py  Canvas.py  Menu.py  TextBox.py  Window.py
src/self_driving_car/: Model.py  Trainer.py
src/self_driving_car/data/: Preprocess.py
src/self_driving_car/driving/: Car.py  Geometry.py  Playgroud.py  Playground.py
src/self_driving_car/network/: Activation.py  Layer.py  LossFunction.py
src/self_driving_car/ui/: Menu.py  TextBox.py  Window.py
