[project]
name = "perceptron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"matplotlib>=3.9.2",
	"numpy>=2.1.1",
	"polars>=1.8.2",
	"tk>=0.1.0",
]

[build-system]
requires = ["hatchling", "hatch-pyinstaller"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.uv]
dev-dependencies = ["hatch-pyinstaller>=1.0.1", "pyinstaller>=6.10.0"]

[tool.hatch.build.targets.pyinstaller]
require-runtime-dependencies = true
flags = ["--clean", "--onedir", "--optimze 2"]
