[project]
name = "perceptron"
version = "0.1.0"
description = "Self implementation of perceptron using Numpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"matplotlib>=3.9.2",
	"numpy>=2.1.1",
	"polars>=1.8.2",
	"scikit-learn>=1.5.2",
	"tk>=0.1.0",
]

[tool.uv]
dev-dependencies = ["pyinstaller>=6.10.0"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
