[project]
name = "self-driving-car"
version = "0.1.0"
description = "Build a self Driving algorithm by self implementation of perceptron using Numpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"matplotlib>=3.9.2",
	"numpy>=2.1.1",
	"polars>=1.8.2",
	"scikit-learn>=1.5.2",
	"tk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "commitizen>=3.30.0",
    "pre-commit>=4.0.1",
    "pyinstaller>=6.10.0",
]
